overflow-x fix

--- a/front_end/src/components/Bottom.css
+++ b/front_end/src/components/Bottom.css
@@ -6,9 +6,10 @@
     position: sticky;
     z-index: 3;
     height: 1.7vw;
-    width: 1000vw;
+    width: 107.8vw;
     margin-left: -100px;
     bottom: 0;
+    
   
   }
 
