--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -3,7 +3,8 @@
 
 
 body {
-  overflow-x: hidden;
+  overflow-x:hidden !important;
+  overscroll-behavior-block: none !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
